fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/Coaching_Account__c.object-meta.xml
<CustomObject>
    <label>Coaching Account</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Coaching Account Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>