fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coaching Accounts</relationshipLabel>
    <relationshipName>Coaching_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>