fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/fields/Call_Objective__c.field-meta.xml
<CustomField>
    <fullName>Call_Objective__c</fullName>
    <description>This field helps us to identify the call objective for coaching.</description>
    <label>Call Objective</label>
    <type>TextArea</type>
</CustomField>