fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/fields/Coaching__c.field-meta.xml
<CustomField>
    <fullName>Coaching__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching</label>
    <referenceTo>Coaching__c</referenceTo>
    <relationshipLabel>Coaching Accounts</relationshipLabel>
    <relationshipName>Coaching_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>