fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/fields/Date_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Call__c</fullName>
    <description>This field helps us to identify the date of coaching call.</description>
    <label>Date of Call</label>
    <type>Date</type>
</CustomField>