fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>This field helps us to identify the outcome of the coaching account.</description>
    <label>Outcome</label>
    <type>TextArea</type>
</CustomField>