fullSandbox11072023/force-app/main/default/objects/Coaching_Account__c/fields/Stage_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Opportunity__c</fullName>
    <description>Helps us to identify the where the stage of Opportunity stands.</description>
    <label>Stage of Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>